Bug 279771 - Mirror layer doesn't mirror its masks
Summary: Mirror layer doesn't mirror its masks
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Filter Layers (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2011-08-09 23:26 UTC by pentalis
Modified: 2012-02-29 18:02 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description pentalis 2011-08-09 23:26:01 UTC
How to reproduce:
1.- Make a layer.
2.- Add a mask to it.
3.- Paint on the mask (with the eraser).
4.- Try to mirror the layer.

Actual results:
When mirroring a layer, its attached masks do not get mirrored.

Expected result:
When mirroring a layer, its attached masks experience exactly the same mirroring.
Comment 1 Halla Rempt 2012-02-29 18:02:10 UTC
Git commit a8f65c3f6919152872f9ad211c48333f67955bb9 by Boudewijn Rempt.
Committed on 29/02/2012 at 14:14.
Pushed by rempt into branch 'master'.

Mirror the masks too when the layer is mirrored

M  +29   -6    krita/ui/kis_layer_manager.cc

http://commits.kde.org/calligra/a8f65c3f6919152872f9ad211c48333f67955bb9