Mirror the masks too when the layer is mirrored

BUG:279771